--- a/rtbox_example/src/main/res/layout/activity_main.xml
+++ b/rtbox_example/src/main/res/layout/activity_main.xml
@@ -1,42 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <ScrollView
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/execContent"
-        android:id="@+id/scrollView">
-        <TextView
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        <android.support.v4.view.PagerTabStrip
+            android:id="@+id/tabs"
+            android:background="@color/colorPrimary"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/textView"/>
-    </ScrollView>
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/execContent"
-        android:layout_above="@+id/exec"/>
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/exec"
-        android:text="exec"
-        android:layout_alignParentBottom="true"/>
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/execSuper"
-        android:text="superExec"
-        android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/exec"/>
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/checkRootAccess"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:text="CheckRootAccess"/>
-</RelativeLayout>
+            android:layout_height="?attr/actionBarSize" />
+    </android.support.v4.view.ViewPager>
+</LinearLayout>
